# Automated-Text-Extraction

./: README.md  docker-compose.yaml  pyproject.toml
Airflow/: dockerfile  entrypoint.sh  pyproject.toml
Airflow/dags/: Openai_Pipeline.py  Pypdf_Pipeline.py
ArchitectureDiagram/: ArchitectureDiagramCode.ipynb
Data/: GaiaToS3.py  GaiaToSql.py  pyproject.toml
Fastapi/: Dockerfile  fastapi_app.py  jwtauth.py  main.py  pdf_routes.py  requirements.txt
Streamlit/: Dockerfile  Main.py  application.py  entrypoint.sh  generate_response.py  generate_summary.py  requirements.txt
Streamlit/.streamlit/: config.toml
