[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["Aniket <patole.an@northeastern.edu>"]
license = "MIT LIcense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pdfplumber = "^0.11.4"
pymupdf = "^1.24.11"
openai = "^1.51.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
