[tool.poetry]
name = "data-extraction-project"
version = "0.1.0"
description = ""
authors = ["Aniket <patole.an@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.0.1"
boto3 = "^1.35.30"
mlcroissant = "^1.0.9"
huggingface-hub = "^0.25.1"
requests = "^2.32.3"
pymysql = "^1.1.1"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
